deploy/fullnode/consensus-layer-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consensus-layer
  labels:
    app.kubernetes.io/name: beacon
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: beacon
  serviceName: consensus-layer-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beacon
    spec:
      serviceAccountName: consensus-layer
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: lighthouse
          image: "sigp/lighthouse:latest"
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -ac
            - >
              [...]
          volumeMounts:
            - name: env-nodeport
              mountPath: /env
            - name: storage
              mountPath: "/data"
            - name: jwt
              mountPath: "/data/jwt.hex"
              subPath: jwt.hex
              readOnly: true
          ports:
            - name: p2p-tcp
              containerPort: 9000
              protocol: TCP
            - name: p2p-udp
              containerPort: 9000
              protocol: UDP
            - name: http-api
              containerPort: 5052
              protocol: TCP
            - name: metrics
              containerPort: 5054
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            tcpSocket:
              port: http-api
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: http-api
      terminationGracePeriodSeconds: 300
      volumes:
        - name: jwt
          secret:
            secretName: consensus-layer-jwt
        - name: env-nodeport
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "1Gi"
      storageClassName: hc-volume100493370
