deploy/fullnode/execution-layer-statefulset.yaml

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: execution-layer
  labels:
    app.kubernetes.io/name: execution
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: execution
  serviceName: execution-layer-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: execution
    spec:
      serviceAccountName: execution-layer
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: geth
          image: "ethereum/client-go:stable"
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -ac
            - >
              [...]
          volumeMounts:
            - name: env-nodeport
              mountPath: /env
            - name: storage
              mountPath: "/data"
            - name: jwt
              mountPath: "/data/jwt.hex"
              subPath: jwt.hex
              readOnly: true
            - name: config
              mountPath: "/config"
              readOnly: true
          ports:
            - name: p2p-tcp
              containerPort: 31000
              protocol: TCP
            - name: p2p-udp
              containerPort: 31000
              protocol: UDP
            - name: http-rpc
              containerPort: 8545
              protocol: TCP
            - name: ws-rpc
              containerPort: 8545
              protocol: TCP
            - name: auth-rpc
              containerPort: 8551
              protocol: TCP
            - name: metrics
              containerPort: 6060
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            tcpSocket:
              port: http-rpc
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: http-rpc
      terminationGracePeriodSeconds: 300
      volumes:
        - name: jwt
          secret:
            secretName: execution-layer-jwt
        - name: env-nodeport
          emptyDir: {}
        - name: config
          configMap:
            name: execution-layer
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "1Gi"
      storageClassName: hc-volume100493370
