deploy/fullnode/metrics-exporter-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-exporter
  labels:
    app.kubernetes.io/name: metrics-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metrics-exporter
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
      - name: ethereum-metrics-exporter
        image: "samcm/ethereum-metrics-exporter:latest"
        imagePullPolicy: IfNotPresent
        command:
          - "/ethereum-metrics-exporter"
          - --config=/config.yaml
          - --metrics-port=9090
        volumeMounts:
          - name: config
            mountPath: "/config.yaml"
            subPath: config.yaml
            readOnly: true
        ports:
          - name: http
            containerPort: 9090
            protocol: TCP
        livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            tcpSocket:
              port: http
        readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: http
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: metrics-exporter
