deploy/fullnode/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-exporter
  labels:
    app.kubernetes.io/name: metrics-exporter
  annotations:
    prometheus.io/port: http
    prometheus.io/path: /metrics
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: metrics-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: execution-layer-headless
  labels:
    app.kubernetes.io/name: execution
spec:
  clusterIP: None
  ports:
    - port: 31000
      targetPort: p2p-tcp
      protocol: TCP
      name: p2p-tcp
    - port: 31000
      targetPort: p2p-udp
      protocol: UDP
      name: p2p-udp
    - port: 8545
      targetPort: http-rpc
      protocol: TCP
      name: http-rpc
    - port: 8551
      targetPort: auth-rpc
      protocol: TCP
      name: auth-rpc
    - port: 6060
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: execution
---
apiVersion: v1
kind: Service
metadata:
  name: execution-layer-p2p-0
  labels:
    app.kubernetes.io/name: execution
    pod: execution-layer-0
    type: p2p
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: p2p-tcp
      port: 31000
      protocol: TCP
      targetPort: p2p-tcp
      nodePort: 31000
    - name: p2p-udp
      port: 31000
      protocol: UDP
      targetPort: p2p-udp
      nodePort: 31000
  selector:
    app.kubernetes.io/name: execution
    statefulset.kubernetes.io/pod-name: "execution-layer-0"
---
apiVersion: v1
kind: Service
metadata:
  name: ethereum-helm-charts-beacon-p2p-0
  labels:
    app.kubernetes.io/name: beacon
    pod: consensus-layer-0
    type: p2p
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: p2p-tcp
      port: 9000
      protocol: TCP
      targetPort: p2p-tcp
      nodePort: 9000
    - name: p2p-udp
      port: 9000
      protocol: UDP
      targetPort: p2p-udp
      nodePort: 9000
  selector:
    app.kubernetes.io/name: beacon
    statefulset.kubernetes.io/pod-name: "consensus-layer-0"
---
apiVersion: v1
kind: Service
metadata:
  name: execution-layer
  labels:
    app.kubernetes.io/name: execution
spec:
  type: ClusterIP
  ports:
    - port: 31000
      targetPort: p2p-tcp
      protocol: TCP
      name: p2p-tcp
    - port: 31000
      targetPort: p2p-udp
      protocol: UDP
      name: p2p-udp
    - port: 8545
      targetPort: http-rpc
      protocol: TCP
      name: http-rpc
    - port: 8551
      targetPort: auth-rpc
      protocol: TCP
      name: auth-rpc
    - port: 6060
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: execution
---
apiVersion: v1
kind: Service
metadata:
  name: consensus-layer-headless
  labels:
    app.kubernetes.io/name: beacon
spec:
  clusterIP: None
  ports:
    - port: 9000
      targetPort: p2p-tcp
      protocol: TCP
      name: p2p-tcp
    - port: 9000
      targetPort: p2p-udp
      protocol: UDP
      name: p2p-udp
    - port: 5052
      targetPort: http-api
      protocol: TCP
      name: http-api
    - port: 5054
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: beacon
---
apiVersion: v1
kind: Service
metadata:
  name: consensus-layer
  labels:
    app.kubernetes.io/name: beacon
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: p2p-tcp
      protocol: TCP
      name: p2p-tcp
    - port: 9000
      targetPort: p2p-udp
      protocol: UDP
      name: p2p-udp
    - port: 5052
      targetPort: http-api
      protocol: TCP
      name: http-api
    - port: 5054
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: beacon
